# timr-tui

./: .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dprint.json  flake.nix  justfile  rust-toolchain.toml
.agents/skills/: snapshot-tests.md  update-cargo-deps.md  update-changelog.md  update-rust-version.md
.github/workflows/: ci.yml  release.yml
.zed/: settings.json
demo/: blink.tape  countdown-finish.tape  countdown-max.tape  countdown-met.tape  countdown-target-future.tape  countdown-target-past.tape  countdown.tape  decis.tape  event.tape  local-time-date.tape  local-time-footer.tape  local-time.tape  maximum.tape  menu.tape  pomodoro-auto-special.tape  pomodoro.tape  rocket-countdown.tape  style.tape  tabata.tape  timer-max.tape  timer.tape
src/: app.rs  args.rs  clock.rs  common.rs  config.rs  constants.rs  countdown.rs  duration.rs  event.rs  events.rs  footer.rs  logging.rs  main.rs  pomodoro.rs  sound.rs  storage.rs  terminal.rs  timer.rs  utils.rs  widgets.rs
src/widgets/: clock.rs  clock_elements.rs  clock_elements_test.rs  clock_test.rs  clock_widget_test.rs  countdown.rs  countdown_test.rs  edit_time.rs  event.rs  event_test.rs  footer.rs  footer_test.rs  header.rs  header_test.rs  local_clock.rs  local_time.rs  local_time_test.rs  pomodoro.rs  pomodoro_test.rs  progressbar.rs  test_utils.rs  timer.rs  timer_test.rs
src/widgets/snapshots/: timr_tui__widgets__clock_widget_test__clock_dddhhmmss.snap  timr_tui__widgets__clock_widget_test__clock_ddhhmmss.snap  timr_tui__widgets__clock_widget_test__clock_decis.snap  timr_tui__widgets__clock_widget_test__clock_dhhmmss.snap  timr_tui__widgets__clock_widget_test__clock_hhmmss.snap  timr_tui__widgets__clock_widget_test__clock_hmmss.snap  timr_tui__widgets__clock_widget_test__clock_mmss.snap  timr_tui__widgets__clock_widget_test__clock_mss.snap  timr_tui__widgets__clock_widget_test__clock_s.snap  timr_tui__widgets__clock_widget_test__clock_ss.snap  timr_tui__widgets__clock_widget_test__clock_style.snap  timr_tui__widgets__clock_widget_test__clock_ydddhhmmss.snap  timr_tui__widgets__clock_widget_test__clock_yddhhmmss.snap  timr_tui__widgets__clock_widget_test__clock_ydhhmmss.snap  timr_tui__widgets__clock_widget_test__clock_yydddhhmmss.snap  timr_tui__widgets__clock_widget_test__clock_yyddhhmmss.snap  timr_tui__widgets__clock_widget_test__clock_yydhhmmss.snap  timr_tui__widgets__clock_widget_test__clock_yyydddhhmmss.snap  timr_tui__widgets__clock_widget_test__clock_yyyddhhmmss.snap  timr_tui__widgets__clock_widget_test__clock_yyydhhmmss.snap  timr_tui__widgets__clock_widget_test__clock_yyyydddhhmmss.snap  timr_tui__widgets__clock_widget_test__clock_yyyyddhhmmss.snap  timr_tui__widgets__clock_widget_test__clock_yyyydhhmmss.snap  timr_tui__widgets__countdown_test__countdown_done.snap  timr_tui__widgets__countdown_test__countdown_edit_minutes.snap  timr_tui__widgets__countdown_test__countdown_edit_seconds.snap  timr_tui__widgets__countdown_test__countdown_initial.snap  timr_tui__widgets__countdown_test__countdown_pause.snap  timr_tui__widgets__countdown_test__countdown_run.snap  timr_tui__widgets__countdown_test__countdown_until_hh12mm.snap  timr_tui__widgets__countdown_test__countdown_until_hhmm.snap  timr_tui__widgets__countdown_test__countdown_until_hhmmss.snap  timr_tui__widgets__event_test__event_since.snap  timr_tui__widgets__event_test__event_since_decis.snap  timr_tui__widgets__event_test__event_since_hh12mm.snap  timr_tui__widgets__event_test__event_since_hhmm.snap  timr_tui__widgets__event_test__event_until.snap  timr_tui__widgets__footer_test__menu_countdown_edit_mode.snap  timr_tui__widgets__footer_test__menu_countdown_edit_mode_vim.snap  timr_tui__widgets__footer_test__menu_countdown_running.snap  (+52 more)
