[package]
name = "timr-tui"
version = "1.1.0"
description = "TUI to organize your time: Pomodoro, Countdown, Timer."
edition = "2024"
# Reminder: Always keep `channel` in `rust-toolchain.toml` in sync with `rust-version`.
rust-version = "1.85.0"
homepage = "https://github.com/sectore/timr-tui"
repository = "https://github.com/sectore/timr-tui"
readme = "README.md"
license = "MIT"
keywords = ["tui", "timer", "countdown", "pomodoro"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream", "serde"] }
color-eyre = "0.6.2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
directories = "5.0.1"
clap = { version = "4.5.23", features = ["derive"] }
time = { version = "0.3.37", features = ["formatting", "local-offset"] }
notify-rust = "4.11.4"
rodio = { version = "0.20.1", features = [
    "symphonia-mp3",
    "symphonia-wav",
], default-features = false, optional = true }
thiserror = { version = "2.0.11", optional = true }

[features]
sound = ["dep:rodio", "dep:thiserror"]
