[package]
name = "timr-tui"
version = "1.4.0"
description = "TUI to organize your time: Pomodoro, Countdown, Timer."
edition = "2024"
# Reminder: Always keep `channel` in `rust-toolchain.toml` in sync with `rust-version`.
rust-version = "1.90.0"
homepage = "https://github.com/sectore/timr-tui"
repository = "https://github.com/sectore/timr-tui"
readme = "README.md"
license = "MIT"
keywords = ["tui", "timer", "countdown", "pomodoro"]
categories = ["command-line-utilities"]
exclude = [
    ".github/*",
    "demo/*.tape",
    "result/*",
    "*.mp3",
    ".claude",
    "CLAUDE.md",
]

[dependencies]
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream", "serde"] }
color-eyre = "0.6.5"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
directories = "5.0.1"
clap = { version = "4.5.40", features = ["derive"] }
time = { version = "0.3.41", features = ["formatting", "local-offset", "parsing", "macros"] }
notify-rust = "4.11.7"
rodio = { version = "0.20.1", features = [
    "symphonia-mp3",
    "symphonia-wav",
], default-features = false, optional = true }
thiserror = { version = "2.0.12", optional = true }


[features]
sound = ["dep:rodio", "dep:thiserror"]
